--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,7 +54,7 @@
   --color-gray-20: var(--gray20);
   --font-geist-sans: var(--font-geist-sans);
   --font-geist-mono: var(--font-geist-mono);
-  --font-rubik: var(--font-geist-rubik);
+  --font-rubik: var(--font-rubik);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -87,10 +87,6 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-}
-
-body {
-  font-family: var(--font-geist-sans);
 }
 
 .dark {
